# business-risk-scoring

./: .gitignore  README.MD
src/api/api-business-risk/: .gitignore  Dockerfile  README.md  app.py  processing.py  requirements.txt
src/business-risk/: Dockerfile  Expertise_et_vision.py  README.md  app.py  pyproject.toml  requirements.txt
src/business-risk/.streamlit/: config.toml
src/business-risk/pages/: 01_Firmographie.py  01_Panorama_et_historique.py  02_Les_secteurs.py  03_Formes_et_Effectifs.py  04_Analyse_territoriale.py  05_Projection_3_ans.py  06_Méthode_et_Infrastructure.py  07_Projection_personnalisée.py
src/eda/: 01_eda.ipynb
src/etl/00_toutes_societes/: 00_extract_api.ipynb  01_test_api_new.ipynb  02_nettoyage.ipynb
src/etl/01_sociétés_INPI/: 01_eda.ipynb  02_preprocess.ipynb
src/etl/01_sociétés_fermées/: 01_sirene_v3.ipynb  02_nettoyage.ipynb  03_eda.ipynb  04_eda_2.ipynb
src/etl/02_sociétés_fermées/: 01_sirene_v3.ipynb  02_nettoyage.ipynb  03_eda.ipynb  04_eda_2.ipynb  05_eda_3.ipynb
src/etl/02_sociétés_ouvertes/: 01_visu_dataset.ipynb
src/etl/03_sociétés_ouvertes/: 01_visu_dataset.ipynb  02_cleaning.ipynb  03_datetime.ipynb
src/etl/05_fusion_datasets/: 01_fusion.ipynb
src/etl/05_sample_bilans/: 01_sample_SIREN.ipynb
src/etl/07_analyse_financiere/: 01_analyse_fi.ipynb
src/model/: 01_baseline.ipynb  02_xgboost.ipynb  03_xgboost_v2.ipynb  04_predictions_v1.ipynb  05_xgboost_v3.ipynb  06_predictions_v2.ipynb  07_predictions_v3.ipynb  08_xgboost_v4.ipynb  09_predictions_v3.ipynb  test.ipynb
src/uml/: schema.puml
(+21 files in other folders)
