package-mode = false

[project]
name = "business-risk"
version = "0.1.0"
description = "Analyse de risque et scoring IA"
authors = [
    {name = "joel", email = "joel.termondjian@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "s3fs>=2024.3.1",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.2",
    "requests>=2.31.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
